<resources>
    <string name="app_name">WeLearn</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="register_success">Registration Successful</string>
    <string name="registering">Registering …</string>
    <string name="creating_account">Creating account …</string>
    <string name="login_success">Login Successful</string>
    <string name="logging_in">Logging in …</string>
    <string name="retrieving_account">Retrieving account …</string>
    <string name="agree_with_our_terms_and_conditions">Agree with our <a href="https://codeenzyme.me">terms and conditions</a></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_an_account">Create an account.</string>
    <string name="already_have_an_account_login"><a href="https://codeenzyme.me">Already have an account? Login</a></string>
    <string name="don_t_have_an_account_create_one"><a href="https://codeenzyme.me">Don\'t have an account? Create one</a></string>
    <string name="login">Login</string>
    <string name="forgot_password"><a href="https://codeenzyme.me">Forgot password?</a></string>
    <string name="welcome_back_login">Welcome back, Login.</string>
    <string name="validate_first_name">First name should be between 2 to 30 characters</string>
    <string name="profile_menu">Profile</string>
    <string name="home_menu">Home</string>
    <string name="leaderboard_menu">Leaderboard</string>
    <string name="settings_menu">Settings</string>
    <string name="logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="renew_subscription">Renew Subscription</string>
    <string name="profile_not_available">Profile data not available</string>
    <string name="edit">Edit</string>
    <string name="profile_updated">Profile updated</string>
    <string name="profile_not_updated">Profile failed to update</string>
    <string name="updating">Updating ...</string>
    <string name="not_currently_subscribed">Not currently subscribed</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="department">Department</string>
    <string name="faculty">Faculty</string>
    <string name="school">School</string>
    <string name="email_profile">Email*</string>
    <string name="last_name_profile">Last Name</string>
    <string name="first_name_profile">First Name</string>
    <string name="display_name">Display Name*</string>
    <string name="play_all">Play All</string>
</resources>