<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bottom_menu_profile"
        android:orderInCategory="100"
        android:title="@string/profile_menu"
        android:icon="@drawable/ic_round_person"/>

    <item android:id="@+id/bottom_menu_home"
        android:orderInCategory="101"
        android:title="@string/home_menu"
        android:icon="@drawable/ic_round_home"/>

    <item android:id="@+id/bottom_menu_leaderboard"
        android:orderInCategory="102"
        android:title="@string/leaderboard_menu"
        android:icon="@drawable/ic_round_leaderboard"/>

    <item android:id="@+id/bottom_menu_settings"
        android:orderInCategory="103"
        android:title="@string/settings_menu"
        android:icon="@drawable/ic_round_settings"/>
</menu>