<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_fragment_root"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:padding="@dimen/standard_padding"
                android:text="@string/create_an_account"/>

            <EditText
                android:id="@+id/register_first_name"
                android:drawableStart="@drawable/ic_baseline_person_30"
                android:drawablePadding="@dimen/standard_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                style="@style/auth_edit_text"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:autofillHints="@string/first_name"
                android:drawableLeft="@drawable/ic_baseline_person_30" />

            <EditText
                android:id="@+id/register_last_name"
                android:drawableStart="@drawable/ic_baseline_person_30"
                android:drawablePadding="@dimen/standard_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                style="@style/auth_edit_text"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:autofillHints="@string/last_name"
                android:drawableLeft="@drawable/ic_baseline_person_30" />

            <EditText
                android:id="@+id/register_email"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:drawablePadding="@dimen/standard_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                style="@style/auth_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/email"
                android:drawableLeft="@drawable/ic_baseline_alternate_email_24" />

            <EditText
                android:id="@+id/register_password"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="@dimen/standard_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                style="@style/auth_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="@string/password"
                android:drawableLeft="@drawable/ic_baseline_vpn_key_24" />

            <EditText
                android:id="@+id/register_confirm_password"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="@dimen/standard_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_shape"
                style="@style/auth_edit_text"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:autofillHints="@string/confirm_password"
                android:drawableLeft="@drawable/ic_baseline_vpn_key_24" />


            <!-- Actions: links, buttons -->
            <CheckBox
                android:id="@+id/agree_register_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/standard_margin"
                app:buttonTint="@color/colorPrimary"
                android:text="@string/agree_with_our_terms_and_conditions"/>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/auth_btn"
                android:background="@drawable/auth_btn_shape"
                android:text="@string/register" />

            <TextView
                android:id="@+id/go_to_login_tv"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/already_have_an_account_login"
                android:focusable="true" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>