<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <!-- Shimmer Views -->
        <FrameLayout
            android:id="@+id/profile_shimmer_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/profile_shimmer_layout" />

        </FrameLayout>

        <!-- Profile picture view -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:padding="@dimen/standard_padding"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circle_profile_image"
            app:srcCompat="@drawable/ic_round_person_trans"
             />

        <!-- Profile display name -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="CodeEnzyme" />

        <!-- First name -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/first_name_profile"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bounded_text_view_stroke"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/profile_props_size"
                    tools:text="Victor" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <!-- Last name -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/last_name_profile"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bounded_text_view_stroke"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/profile_props_size"
                    tools:text="Elezua" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <!-- Email -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/email_profile"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bounded_text_view_stroke"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/profile_props_size"
                    tools:text="victorelezua@gmail.com" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <!-- School -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/school"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bounded_text_view_stroke"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/profile_props_size"
                    tools:text="FUTO" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <!-- Faculty -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/faculty"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_faculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bounded_text_view_stroke"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/profile_props_size"
                    tools:text="SOBS" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <!-- Department -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/department"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/profile_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bounded_text_view_stroke"
                    android:padding="@dimen/standard_padding"
                    android:textSize="@dimen/profile_props_size"
                    tools:text="Biochemistry" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <!-- Subscription View -->
        <TextView
            android:id="@+id/subscription_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Subscription expires in 10/20/21"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/update_profile"
            app:icon="@drawable/ic_baseline_cloud_upload_24" />

        <Button
            android:id="@+id/update_subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/renew_subscription"
            app:icon="@drawable/ic_baseline_payment" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/logout"
            app:icon="@drawable/ic_round_arrow_back" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>